@@ -6,9 +6,12 @@ import fr.eseo.tauri.model.Team;
 import fr.eseo.tauri.model.enumeration.Gender;
 import fr.eseo.tauri.repository.StudentRepository;
 import fr.eseo.tauri.repository.TeamRepository;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
+
 import static org.mockito.Mockito.*;
 import static org.assertj.core.api.Assertions.*;
 
@@ -16,10 +19,11 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
+import org.mockito.MockitoAnnotations;
 import org.springframework.boot.test.context.SpringBootTest;
 
-@SpringBootTest
-public class TeamServiceTest {
+@Nested
+class TeamServiceTest {
 
     @Mock
     private TeamRepository teamRepository;
@@ -33,8 +37,13 @@ public class TeamServiceTest {
     @InjectMocks
     private TeamService teamService;
 
+    @BeforeEach
+    void init_mocks() {
+        MockitoAnnotations.openMocks(this);
+    }
+
     @Test
-    public void testGetAllTeams() {
+    void testGetAllTeams() {
         // Arrange
         Team team1 = new Team();
         Team team2 = new Team();
@@ -53,25 +62,25 @@ public class TeamServiceTest {
     }
 
     @Test
-    public void testGetAllTeamsEmptyList() {
+    void testGetAllTeamsEmptyList() {
         // Arrange
         Team team1 = new Team();
         Team team2 = new Team();
         Project project = new Project();
         when(projectService.getCurrentProject()).thenReturn(project);
-        when(teamRepository.findAllByProjectId(project.id())).thenReturn(Arrays.asList());
+        when(teamRepository.findAllByProjectId(project.id())).thenReturn(List.of());
 
         // Act
         List<Team> teams = teamService.getAllTeams();
 
         // Assert
-        assertThat(teams).hasSize(0);
+        assertThat(teams).isEmpty();
         verify(teamRepository, times(1)).findAllByProjectId(project.id());
         verify(projectService, times(1)).getCurrentProject();
     }
 
     @Test
-    public void testGetTeamById() {
+    void testGetTeamById() {
         // Arrange
         Team team = new Team();
         when(teamRepository.findById(1)).thenReturn(Optional.of(team));
@@ -85,7 +94,7 @@ public class TeamServiceTest {
     }
 
     @Test
-    public void testGetTeamByIdNull() {
+    void testGetTeamByIdNull() {
         // Arrange
         when(teamRepository.findById(1)).thenReturn(Optional.empty());
 
@@ -94,11 +103,10 @@ public class TeamServiceTest {
 
         // Assert
         assertThat(result).isNull();
-        verify(teamRepository, times(1)).findById(1);
     }
 
     @Test
-    public void testGetNbWomanByTeamId() {
+    void testGetNbWomanByTeamId() {
         // Arrange
         Team team = new Team();
         Student student1 = new Student();
@@ -116,7 +124,7 @@ public class TeamServiceTest {
     }
 
     @Test
-    public void testGetNbWomanByTeamIdZero() {
+    void testGetNbWomanByTeamIdZero() {
         // Arrange
         Team team = new Team();
         Student student1 = new Student();
@@ -130,11 +138,11 @@ public class TeamServiceTest {
         Integer nbWoman = teamService.getNbWomanByTeamId(1);
 
         // Assert
-        assertThat(nbWoman).isEqualTo(0);
+        assertThat(nbWoman).isZero();
     }
 
     @Test
-    public void testGetNbBachelorsByTeamId() {
+    void testGetNbBachelorsByTeamId() {
         // Arrange
         Team team = new Team();
         Student student1 = new Student();
@@ -152,7 +160,7 @@ public class TeamServiceTest {
     }
 
     @Test
-    public void testGetNbBachelorsByTeamIdZero() {
+    void testGetNbBachelorsByTeamIdZero() {
         // Arrange
         Team team = new Team();
         Student student1 = new Student();
@@ -166,11 +174,11 @@ public class TeamServiceTest {
         Integer nbBachelors = teamService.getNbBachelorByTeamId(1);
 
         // Assert
-        assertThat(nbBachelors).isEqualTo(0);
+        assertThat(nbBachelors).isZero();
     }
 
     @Test
-    public void testGetNbStudentsByTeamId() {
+    void testGetNbStudentsByTeamId() {
         // Arrange
         Team team = new Team();
         Student student1 = new Student();
@@ -186,16 +194,16 @@ public class TeamServiceTest {
     }
 
     @Test
-    public void testGetNbStudentsByTeamIdZero() {
+    void testGetNbStudentsByTeamIdZero() {
         // Arrange
         Team team = new Team();
         when(teamRepository.findById(1)).thenReturn(Optional.of(team));
-        when(studentRepository.findByTeam(team)).thenReturn(Arrays.asList());
+        when(studentRepository.findByTeam(team)).thenReturn(List.of());
 
         // Act
         Integer nbStudents = teamService.getNbStudentsByTeamId(1);
 
         // Assert
-        assertThat(nbStudents).isEqualTo(0);
+        assertThat(nbStudents).isZero();
     }
 }
